# home-dashboard

./: .coverage  .env.example  .gitignore  README.md  ai_doc.md  cache.json  example.sql  pyproject.toml  pytest.ini  railway.toml
.github/workflows/: ci.yml
lambdas/tesla-daily-load/: load.py
src/dashboard/: app.py
src/dashboard/assets/: calendar.css  layout.css  plaid_clientside.js
src/dashboard/db/: pg.py
src/dashboard/db/create/: calendar_events.sql  tesla-miles-log.sql
src/dashboard/models/: calendar.py
src/dashboard/pages/: budget.py  calendar.py  miles_log.py
src/dashboard/services/: plaid.py  plaid_client.py  storage.py
tests/: test_calendar.py  test_tesla_miles_log.py
