[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Daniel <idanielbranham@gmail.com>"]
readme = "README.md"
packages = [{ include = "dashboard", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
dash = ">=3.1.0,<4.0.0"
plotly = ">=6.2.0,<7.0.0"
pandas = ">=2.3.0,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
dash-mantine-components = ">=2.0.0,<3.0.0"
dash-iconify = ">=0.1.2,<0.2.0"
dash-ag-grid = ">=31.3.1,<32.0.0"
teslapy = ">=2.9.0,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
gunicorn = ">=23.0.0,<24.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
freezegun = "^1.5.5"
ruff = "^0.13.2"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
